[package]
name = "ts-mem-pool"
license = "MIT"
version = "0.1.3"
authors = ["Michel Habr <michel-haber@hotmail.com>"]
description = "A simple thread-safe memory pool crate"
repository = "https://github.com/Michel-Haber/ts-mem-pool"
keywords = ["memory", "pool", "thread", "safe"]
maintenance = { status = "looking-for-maintainer" }
readme = "Readme.md"

[dependencies]

[profile.dev]
incremental = true

[profile.release]
lto = true
